--- a/runtime/dialog/styles/input.css
+++ b/runtime/dialog/styles/input.css
@@ -1,10 +1,10 @@
-.text-input,
 .check-box > .box,
 .combo-box-base,
 .combo-box-popup > .list-view {
-    -fx-background-color: rgba(34,36,38,.15), white;
+    -fx-background-color: black;
     -fx-background-insets: 0, 1;
     -fx-background-radius: 3px;
+	-fx-text-fill: white;
 }
 
 .text-input:focused,
@@ -13,15 +13,21 @@
 .combo-box-base:hover,
 .combo-box-base:focused,
 .combo-box-base:showing {
-    -fx-background-color: rgba(34,36,38,.35), white;
+    -fx-background-color: rgba(255,255,255,.15), black;
+	-fx-text-fill: white;
 }
 
 /* Combobox-specific */
 .combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell {
-    -fx-background-color: white;
-    -fx-text-fill: black;
+    -fx-background-color: black;
+    -fx-text-fill: white;
 }
 
 .combo-box-popup  > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:hover {
-    -fx-background-color: #EFEFEF;
+    -fx-background-color: black;
+	-fx-text-fill: white;
+} 
+
+.text-input {
+	-fx-text-fill: white; 
 }
