--- a/runtime/dialog/dialog.fxml
+++ b/runtime/dialog/dialog.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -26,20 +27,24 @@
     <WebView fx:id="news" layoutX="218.0" opacity="0.65" prefHeight="549.0" prefWidth="782.0" />
 
     <!-- Auth pane -->
-    <Pane fx:id="authPane" layoutX="6.0" layoutY="64.0" prefHeight="400.0" prefWidth="207.0">
+    <Pane fx:id="authPane" layoutX="-1.0" prefHeight="549.0" prefWidth="220.0">
+      <Button fx:id="left_panel" mnemonicParsing="false" opacity="0.0" prefHeight="549.0" prefWidth="220.0" text="Button">
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+      </Button>
         <!-- First row -->
-        <TextField fx:id="login" layoutX="4.0" layoutY="123.0" prefHeight="30.0" prefWidth="200.0" promptText="Логин" style="-fx-border-color: #000080; -fx-background-color: #000000;" />
-        <PasswordField fx:id="password" layoutX="4.0" layoutY="153.0" prefHeight="30.0" prefWidth="200.0" promptText="Пароль" style="-fx-background-color: #000000; -fx-border-color: #000080;" />
-        <Button fx:id="goAuth" defaultButton="true" layoutX="4.0" layoutY="264.0" prefHeight="30.0" prefWidth="160.0" text="Авторизация" />
-        <Button fx:id="goSettings" layoutX="171.0" layoutY="264.0" prefHeight="30.0" prefWidth="30.0" />
+        <TextField fx:id="login" layoutX="11.0" layoutY="200.0" prefHeight="30.0" prefWidth="200.0" promptText="Логин" style="-fx-border-color: #000080; -fx-background-color: #000000;" />
+        <PasswordField fx:id="password" layoutX="11.0" layoutY="230.0" prefHeight="30.0" prefWidth="200.0" promptText="Пароль" style="-fx-background-color: #000000; -fx-border-color: #000080;" />
+        <Button fx:id="goAuth" defaultButton="true" layoutX="11.0" layoutY="341.0" prefHeight="30.0" prefWidth="160.0" text="Авторизация" />
+        <Button fx:id="goSettings" layoutX="178.0" layoutY="341.0" prefHeight="30.0" prefWidth="30.0" />
 
         <!-- Second row -->
-        <ComboBox fx:id="profiles" layoutX="4.0" layoutY="183.0" prefHeight="30.0" prefWidth="200.0" style="-fx-border-color: #000080;" />
-        <CheckBox fx:id="savePassword" layoutX="4.0" layoutY="222.0" prefWidth="200.0" text="Сохранить пароль" textFill="WHITE" />
-        <Hyperlink fx:id="link" layoutX="4.0" layoutY="294.0" prefHeight="30.0" prefWidth="160.0" />
+        <ComboBox fx:id="profiles" layoutX="11.0" layoutY="260.0" prefHeight="30.0" prefWidth="200.0" style="-fx-border-color: #000080;" />
+        <CheckBox fx:id="savePassword" layoutX="11.0" layoutY="299.0" prefWidth="200.0" text="Сохранить пароль" textFill="WHITE" />
+        <Hyperlink fx:id="link" layoutX="14.0" layoutY="371.0" prefHeight="30.0" prefWidth="160.0" />
     </Pane>
 
     <!-- Overlay -->
-    <Pane fx:id="dim" layoutX="0.0" layoutY="0.0" prefHeight="400.0" prefWidth="600.0" visible="false" />
-   <Button fx:id="left_panel" mnemonicParsing="false" prefHeight="549.0" prefWidth="219.0" text="Button" visible="false" />
+    <Pane fx:id="dim" layoutX="0.0" layoutY="0.0" prefHeight="600.0" prefWidth="1000.0" visible="false" />
 </Pane>
