--- a/runtime/dialog/overlay/update/update.fxml
+++ b/runtime/dialog/overlay/update/update.fxml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane xmlns:fx="http://javafx.com/fxml/1" fx:id="overlay" prefWidth="900.0" prefHeight="450.0">
-    <stylesheets>
-        <URL value="@update.css" />
-    </stylesheets>
+<Pane fx:id="overlay" prefHeight="368.0" prefWidth="621.0" stylesheets="@update.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
 
     <!-- Update controls -->
-    <Label fx:id="utitle" layoutX="10.0" layoutY="10.0" prefWidth="480.0" text="Обновление" />
-    <Label fx:id="description" layoutX="10.0" layoutY="50.0" prefWidth="480.0" prefHeight="165.0" text="..." />
-    <ProgressBar fx:id="progress" layoutX="10.0" layoutY="220.0" prefWidth="480.0" prefHeight="20.0" />
+    <Label fx:id="utitle" layoutY="12.0" prefHeight="27.0" prefWidth="621.0" text="Обновление" textAlignment="CENTER" textFill="WHITE">
+      <font>
+         <Font size="17.0" />
+      </font></Label>
+    <Label fx:id="description" layoutX="30.0" layoutY="48.0" prefHeight="226.0" prefWidth="551.0" text="..." textFill="WHITE">
+      <font>
+         <Font size="15.0" />
+      </font></Label>
+   <Label fx:id="textFact" layoutX="30.0" layoutY="300.0" text="Интересный факт: " textFill="WHITE" />
+    <ProgressBar fx:id="progress" layoutX="22.0" layoutY="328.0" prefHeight="27.0" prefWidth="576.0" />
 </Pane>
