--- a/runtime/dialog/dialog.fxml
+++ b/runtime/dialog/dialog.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -28,11 +27,7 @@
 
     <!-- Auth pane -->
     <Pane fx:id="authPane" layoutX="-1.0" prefHeight="549.0" prefWidth="220.0">
-      <Button fx:id="left_panel" mnemonicParsing="false" opacity="0.0" prefHeight="549.0" prefWidth="220.0" text="Button">
-         <cursor>
-            <Cursor fx:constant="DEFAULT" />
-         </cursor>
-      </Button>
+      <WebView id="left_panel" opacity="0.0" prefHeight="549.0" prefWidth="220.0" />
         <!-- First row -->
         <TextField fx:id="login" layoutX="11.0" layoutY="200.0" prefHeight="30.0" prefWidth="200.0" promptText="Логин" style="-fx-border-color: #000080; -fx-background-color: #000000;" />
         <PasswordField fx:id="password" layoutX="11.0" layoutY="230.0" prefHeight="30.0" prefWidth="200.0" promptText="Пароль" style="-fx-background-color: #000000; -fx-border-color: #000080;" />
